--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Hover</title>
+	
+	<!-- css -->
+	<link rel="stylesheet" href="style.css" type="text/css">
+
 </head>
 <body>
+
+	<ul class="nav">
+		<li><a href="#">Home</a></li>
+		<li><a href="#">About</a></li>
+		<li><a href="#">Contact</a></li>
+		<li><a href="#">Blog</a></li>
+	</ul>
 	
 </body>
 </html>
